--- a/boss.config
+++ b/boss.config
@@ -1,8 +1,11 @@
 [{boss, [
     {applications, [example_wiki]},
     {db_host, "localhost"},
-    {db_port, 1978},
-    {db_adapter, mock},
+    {db_port, 3306},
+    {db_adapter, mysql},
+    {db_username, "root"},
+    {db_password, "password"},
+    {db_database, "wiki"},
     {log_dir, "log"},
     {server, mochiweb},
     {port, 8001},
