--- a/boss.config
+++ b/boss.config
@@ -5,7 +5,7 @@
     {db_adapter, mysql},
     {db_username, "root"},
     {db_password, "password"},
-    {db_database, "wiki"},
+    {db_database, "example_wiki"},
     {log_dir, "log"},
     {server, mochiweb},
     {port, 8001},
