rebarified for CB version 0.7

--- a/boss.config
+++ b/boss.config
@@ -2,18 +2,22 @@
     {applications, [example_wiki]},
     {db_host, "localhost"},
     {db_port, 3306},
-    {db_adapter, mysql},
+    {db_adapter, mock},
     {db_username, "root"},
     {db_password, "password"},
     {db_database, "example_wiki"},
     {log_dir, "log"},
-    {server, mochiweb},
+    {server, misultin},
     {port, 8001},
     {session_adapter, mock},
     {session_key, "_boss_session"},
-    {session_exp_time, 525600}
+    {session_exp_time, 525600},
+    {path, "../ChicagoBoss"},
+    {vm_cookie, "my_secret_cookie"}, % Optional, defaults to abc123
+    {websocket, true}
 ]},
 { example_wiki, [
-    {base_url, "/"}
+    {base_url, "/"},
+    {path, "../example_wiki"}
 ]}
 ].
