--- a/boss.config
+++ b/boss.config
@@ -7,7 +7,7 @@
     {db_password, "password"},
     {db_database, "example_wiki"},
     {log_dir, "log"},
-    {server, misultin},
+    {server, mochiweb},
     {port, 8001},
     {session_adapter, mock},
     {session_key, "_boss_session"},
@@ -16,6 +16,37 @@
     {vm_cookie, "my_secret_cookie"}, % Optional, defaults to abc123
     {websocket, true}
 ]},
+
+%% MESSAGE QUEUE
+
+{ tinymq, [
+%% max_age- Maximum age of messages in the [message queue], in
+%%   seconds. Defaults to 60.
+    % {max_age, 60}
+]},
+
+%%%%%%%%%%%%%
+%% Logging %%
+%%%%%%%%%%%%%
+
+%% Lager default config. 
+%% More info: https://github.com/basho/lager 
+
+{lager, [
+    {handlers, [
+      {lager_console_backend, info},
+      {lager_file_backend, [
+        {"log/error.log", error, 10485760, "$D0", 5},
+        {"log/console.log", info, 10485760, "$D0", 5}
+      ]}
+    ]}
+  ]},
+
+%% APPLICATION CONFIGURATIONS
+
+%% domains - A list of domains to serve the application on
+%% static_prefix - The URL prefix of static assets
+%% doc_prefix - The URL prefix for developer documentation
 { example_wiki, [
     {base_url, "/"},
     {path, "../example_wiki"}
